# verdigris

./: .dockerignore  .git-blame-ignore-revs  .gitignore  AGENTS.md  BACKEND_STATUS.md  BACKEND_TODO.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEMO_ROADMAP.md  Dockerfile  NOTICE  README.md  ROADMAP.md  SECURITY.md  STATUS.md  mkdocs.yml  run.sh
.claude/: settings.json
.claude/agents/: dst-reviewer.md
.claude/commands/: ci.md  dst.md
.claude/hooks/: on-edit.sh
.github/workflows/: docs.yml  harness.yml  rust.yml  web.yml
bench/: Dockerfile.vdg  docker-compose.yml  loss-matrix.sh  run-loadtest.sh  sample-resources.sh
bench/config/: loadtest.toml
bench/loadgen/: Cargo.toml
bench/loadgen/src/: main.rs
bench/results/: RESULTS.md  b2-1048576.json  b2-12582912.json  b2-262144.json  b2-4194304.json  b2-8388608.json  body-1048576.json  body-12582912.json  body-262144.json  body-4194304.json  c2-1.json  c2-16.json  c2-2.json  c2-32.json  c2-4.json  c2-8.json  conc-1.json  conc-16.json  conc-2.json  conc-32.json  conc-4.json  conc-8.json  corpus-load.json  latest.json  loss-compaction-conc8.json  loss-compaction-serial.json  loss-no-compaction-conc8.json  loss-no-compaction-serial.json  machine.txt  resources.csv  scan-corpus.json  sustained-100k-machine.txt  sustained-100k-resources.csv  sustained-100k.json  sustained.json
bench/results/run1-archive/: latest.json  machine.txt  resources.csv
config/: verdigris.toml
crates/core/: Cargo.toml
crates/core/src/: alert.rs  auth.rs  batch.rs  clock.rs  config.rs  cost.rs  estimate.rs  lib.rs  lifecycle.rs  manifest.rs  model.rs  rng.rs  search.rs  text.rs
crates/ingest/: Cargo.toml
crates/ingest/examples/: inspect_parquet.rs
crates/ingest/src/: encode.rs  generate.rs  lib.rs  otlp.rs  schema.rs  wire.rs
crates/ingest/tests/: concurrent_ingest.rs  row_group_index.rs  trigram_density.rs
crates/query/: Cargo.toml
crates/query/examples/: explain_pruning.rs
crates/query/src/: engine.rs  index.rs  lib.rs
crates/query/tests/: engine.rs  row_group_pruning.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  sim.rs
crates/storage/tests/: dst.rs
crates/vdg/: Cargo.toml
crates/vdg/src/: lifecycle_apply.rs  main.rs  realclock.rs  serve.rs
crates/vdg/tests/: seams.rs
deploy/: README.md
deploy/grafana/: README.md  dashboard-logs.json  datasource.yaml
deploy/helm/verdigris/: Chart.yaml  values.yaml
deploy/helm/verdigris/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  lifecycle-job.yaml  pvc.yaml  seed-job.yaml  service.yaml  serviceaccount.yaml  vector-configmap.yaml  vector-daemonset.yaml
docs/: API.md  ARCHITECTURE.md  contributing.md  cost.md  dst-architecture.md  faq.md  getting-started.md  index.md  load-test.md  querying.md
docs/adr/: 0002-manifest-as-iceberg-standin.md  0003-ingest-query-role-split.md  README.md
frontend/: AGENTS.md  CLAUDE.md  _verify.js  api.js  app.js  charts.js  index.html  pages.js  styles.css
scripts/: verify.sh  verify_selftest.sh
web/: RESUME.md  STATUS.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  main.tsx  store.tsx
web/src/charts/: index.ts  svg.tsx  uplot.tsx
web/src/config/: runtime.ts
web/src/lib/: api.ts  arrow.ts  format.ts  mock.ts  session.ts  transport.ts  types.ts
web/src/pages/: Alerts.tsx  Cost.tsx  Dashboards.tsx  LiveTail.tsx  Logs.tsx  Pipelines.tsx  Settings.tsx  Storage.tsx
web/src/shell/: Sidebar.tsx  Switcher.tsx  TokenGate.tsx
web/src/ui/: app.css  extra.css  primitives.tsx
