[package]
name = "verdigris-query"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

# Query seam: the `ScanExecutor` boundary. Default build uses the
# deterministic ModeledExecutor (pure Rust, no heavy deps, offline).
# Real execution is DataFusion (pure Rust, builds on the same object_store
# crate we standardize on) and is opt-in behind the `datafusion` feature so
# the default build stays fast and offline. DuckDB is intentionally NOT used:
# it is native C++ and opaque to the deterministic simulator (see ADR-001).
[features]
default = []
datafusion = ["dep:datafusion", "dep:object_store", "dep:serde_json", "dep:futures"]

[dependencies]
verdigris-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
# Only needed by the (gated) DataFusion engine; must be the same object_store
# version DataFusion uses so Arc<dyn ObjectStore> unifies.
object_store = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
# Result batches are drained as a stream (bounded execution, issue #2).
futures = { workspace = true, optional = true }

[dependencies.datafusion]
version = "54"
optional = true
default-features = true

# Test-only: the executor tests use the tokio test harness; the engine
# integration tests write real Parquet through the production ingest path.
[dev-dependencies]
tokio.workspace = true
verdigris-ingest.workspace = true

# The engine tests only make sense with the real engine compiled in.
[[test]]
name = "engine"
required-features = ["datafusion"]

# Likewise the row-group pruning tests: they assert on what DataFusion actually
# reads, which needs DataFusion.
[[test]]
name = "row_group_pruning"
required-features = ["datafusion"]

# Same for the pruning example: it drives DataFusion directly to print the real
# scan metrics, so it can't build in the default (ModeledExecutor) config.
[[example]]
name = "explain_pruning"
required-features = ["datafusion"]
